--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@ function initROP(init)
 		if((j2===jump_2)&&(j1===jump_1)&&(x===xtra_data)&&(sf===stack_frame))
 		{
 			if(t_out!==0){clearTimeout(t_out);}
-			showResult('<h1>Подготовка...');
+			showResult('<h1>Preparando...');
 			triggerX();
 		}
 		else
